image: zhaoxy8/nginx:red

--- a/mainfests/github-nginx.yaml
+++ b/mainfests/github-nginx.yaml
@@ -17,5 +17,5 @@ spec:
         run: github-nginx
     spec:
       containers:
-      - image: nginx
+      - image: zhaoxy8/nginx:red
         name: github-nginx
