--- a/mainfests/github-nginx.yml
+++ b/mainfests/github-nginx.yml
@@ -17,5 +17,5 @@ spec:
         run: github-nginx
     spec:
       containers:
-      - image: zhaoxy8/nginx:red
+      - image: zhaoxy8/nginx:blue
         name: github-nginx
